# minijson

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  TODO.md  appveyor.yml  build  config.h.in  configure  configure.ac  index.html  params.json  parser.y  scanner.l
include/: minijson.h  minijson_conf.h  minijson_internal.h  minijson_stream.h
src/: Makefile.am  Makefile.in  collection.c  collection.h  key_value_pair.c  key_value_pair.h  minijson.c  minijson.h  minijson_array.c  minijson_conf.c  minijson_conf.h  minijson_internal.h  minijson_memory.c  minijson_memory.h  minijson_object.c  minijson_primitives.c  minijson_stream.c  minijson_stream.h  minijson_string.c  src.mk
test/: CMakeLists.txt  collection_test.c  json_array_test.c  json_object_test.c  json_stream.test.c  json_string.test.c  json_string_test.c  key_value_pair_test.c  minijson.test.c  parser_test.c
