lib_LIBRARIES = libminijson.a
libminijson_a_SOURCES = collection.c \
			key_value_pair.c \
			minijson_array.c \
			minijson.c \
			minijson_conf.c \
			minijson_memory.c \
			minijson_object.c \
			minijson_primitives.c \
			minijson_stream.c \
			minijson_string.c \
			collection.h \
			key_value_pair.h \
			minijson_conf.h \
			minijson.h \
			minijson_internal.h \
			minijson_memory.h \
			minijson_stream.h

include_HEADERS =  \
			collection.h \
			key_value_pair.h \
			minijson_conf.h \
			minijson.h \
			minijson_internal.h \
			minijson_memory.h \
			minijson_stream.h
